# advent-of-code-solutions

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py  runner.jl  runner.py  template.py  test_runner.py
advent/: template.py  tools.py
advent/advent2015/: p2.py  p7.py
advent/advent2019/: p4.py
advent/advent2020/: p11.py  p12.py  p13.py  p14.py  p15.py  p18.py  p2.py  p3.py  p4.py  p6.py  p7.py
advent/advent2021/: p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24_group.py  p25.py  p3.py  p5.py  p8.py  p9.py
advent/advent2022/: p1.py  p10.py  p11.py  p12.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
advent/advent2023/: p1.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py
advent2015/: aoc2.py  aoc3.py  aoc32.py  aoc4.py  aoc5.py  aoc52.py  aoc6.py  aoc62.py  aoc7.py  aoc7b.py  aoc8.py  p6.py  p7.py
advent2018/: day9.py
advent2019/: p2.py  p5.py  problem2.py  problem5.py
advent2020/: advent2020.ipynb  p1.py  p10.py  p11.py  p11a.py  p11b.py  p12.py  p12a.py  p12b.py  p13.py  p13a.py  p13b.py  p14.py  p15.py  p15a.py  p15b.py  p16.py  p17.py  p18.py  p18a.py  p18b.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  pe736.py  prob1.py  prob10.py  prob11.py  prob2.py  prob4.py  prob5.py  prob6.py  prob7.py  prob8.py  prob9.py  (+19 more)
advent2021/: p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p1a.py  p1b.py  p2.py  p20.py  p21.py  p22.py  p23.py  p24_group.py  p25.py  p2a.py  p2b.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  template.py  test_p1.py  test_p10.py  test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p15.py  test_p16.py  test_p17.py  test_p18.py  (+14 more)
advent2022/: p1.py  p10.py  p11.py  p11_cython.pyx  p3.py  p4.py  p5.py  p6.py  p8.py
advent_tools/: __init__.py  advent_tools.py  pyproject.toml  setup.py  test_advent_tools.py
julia/: Project.toml  p2024.01.jl  test.jl
julia/src/: Advent.jl  p2024_01.jl  p2024_02.jl  p2024_03.jl  template.jl  utils.jl
julia/test/: runtests.jl
python/: .dockerignore  Dockerfile  pyproject.toml
src/: advent_tools.py  template.py
src/advent/: run.py
src/advent2015/: p2.py  p3.py  p5.py  p6.py  p7.py
src/advent2019/: Advent2019.nb  p2.py  p5.py
src/advent2020/: p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p18.py  p2.py  p4.py  p7.py  p9.py
src/advent2021/: p10.py  p11.py  p12.py  p13.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p24_group.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
src/advent2022/: p1.py  p10.py  p11.py  p11_cython.c  p12.py  p2.py  p3.py  p4.py  p5.py  p7.py  p8.py  p9.py
src/advent_tools/: __init__.py  advent_tools.py
tests/: test_advent_tools.py  test_template.py
tests/test_2020/: test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p15.py  test_p16.py  test_p17.py  (+1 more)
(+20 files in other folders)
