[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent_solver"
version = "0.1.0"
description = "Advent of Code Solutions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {email = "dshemetov@ucdavis.edu"},
  {name = "Dmitry Shemetov"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
repository = "https://github.com/dshemetov/advent-of-code-solutions"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 150
target-version = ['py310']
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
  | \*.pyx
)/
'''

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 150
fixable = ["E", "F", "I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-continue-on-failure"
