[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advent_tools"
version = "0.1.0"
description = "Utilities for Advent of Code Puzzles"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {email = "dshemetov@ucdavis.edu"},
  {name = "Dmitry Shemetov"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = ["joblib", "more-itertools", "numpy", "python-dotenv", "requests"]

[project.optional-dependencies]
dev = [
    "docopt",
    "joblib",
    "more_itertools",
    "numpy",
    "requests",
    "pytest",
    "python-dotenv",
    "scipy",
    "sympy",
]

[project.urls]
repository = "https://github.com/dshemetov/advent-of-code-solutions"
